--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Jeg har aldrig. - Kekshop</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body lang="da">
 
+    
+    <script type="text/javascript" src="js/jquery.3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/master.js"></script>
   </body>
 </html>
