--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Jeg har aldrig. - Kekshop</title>
+    <title>Jeg har aldrig ( ͡° ͜ʖ ͡°) - Kekshop</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/master.css">
@@ -14,12 +14,17 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="./">Kekshop</a>
+          <a class="navbar-brand" href="./">Kekshop ( ͡° ͜ʖ ͡°)</a>
         </div>
       </div>
     </nav>
 
-    
+    <div class="container">
+      <div id="question">
+        Tryk på stil et spørgsmål... spade
+      </div>
+      <button type="button" class="btn btn-lg btn-primary" id="questionButton">Hit med et spørgsmål... SMATSO!!!?</button>
+    </div>
 
     <script type="text/javascript" src="js/jquery.3.2.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
