--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <script type="text/javascript" src="js/jquery.3.2.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/packs/hyggeligFest.js"></script>
     <script type="text/javascript" src="js/master.js"></script>
 
   </body>
