--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <button type="button" class="btn btn-lg btn-primary" id="questionButton">Hit med et spørgsmål... SMATSO!!!?</button>
     </div>
 
-    <script type="text/javascript" src="js/jquery.3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/packs/hyggeligFest.js"></script>
     <script type="text/javascript" src="js/master.js"></script>
