--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeg har aldrig ( ͡° ͜ʖ ͡°) - Kekshop V2.0.1</title>
+    <title>Jeg har aldrig ( ͡° ͜ʖ ͡°) - Kekshop V2.1.0</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/master.css">
@@ -15,7 +15,18 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="./">Kekshop ( ͡° ͜ʖ ͡°) __ V2.0.1</a>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="./">Kekshop ( ͡° ͜ʖ ͡°) __ V2.1.0</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="https://github.com/Katofln/never-have-i-ever" target="_blank">Source</a></li>
+          </ul>
         </div>
       </div>
     </nav>
