--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeg har aldrig ( ͡° ͜ʖ ͡°) - Kekshop V2.1.1</title>
+    <title>Jeg har aldrig ( ͡° ͜ʖ ͡°) - Kekshop V2.2.0</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/master.css">
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-103007885-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 
   </head>
   <body lang="da">
@@ -21,10 +32,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="./">Kekshop ( ͡° ͜ʖ ͡°) __ V2.1.1</a>
+          <a class="navbar-brand" href="./">Kekshop ( ͡° ͜ʖ ͡°) __ V2.2.0</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+            <li><a href="https://frederikstroem.com">Main site</a></li>
             <li><a href="https://github.com/Katofln/never-have-i-ever" target="_blank">Source</a></li>
           </ul>
         </div>
