--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
+<!--
+  Version: 2.3.1
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeg har aldrig ( ͡° ͜ʖ ͡°) - Kekshop V2.2.0</title>
+    <title>Jeg har aldrig</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/master.css">
@@ -32,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="./">Kekshop ( ͡° ͜ʖ ͡°) __ V2.2.0</a>
+          <a class="navbar-brand" href="./">Jeg har aldrig</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -44,9 +48,9 @@
     </nav>
 
     <div class="container">
-      <button type="button" class="btn btn-lg btn-primary" id="questionButton">Hit med et spørgsmål... SMATSO!!!?</button>
+      <button type="button" class="btn btn-lg btn-primary" id="questionButton">Hit med et spørgsmål!</button>
       <div id="question">
-        Tryk på stil et spørgsmål... spade
+        Tryk på <i>"Hit med et spørgsmål!"</i>
       </div>
     </div>
 
