--- a/index.html
+++ b/index.html
@@ -1,63 +1,11 @@
-<!--
-  Version: 2.3.1
--->
-
 <!DOCTYPE html>
 <html>
   <head>
-
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeg har aldrig</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/master.css">
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-103007885-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-
   </head>
-  <body lang="da">
+  <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="./">Jeg har aldrig</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="https://frederikstroem.com">Main site</a></li>
-            <li><a href="https://github.com/Katofln/never-have-i-ever" target="_blank">Source</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <div class="container">
-      <button type="button" class="btn btn-lg btn-primary" id="questionButton">Hit med et spørgsmål!</button>
-      <div id="question">
-        Tryk på <i>"Hit med et spørgsmål!"</i>
-      </div>
-    </div>
-
-    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/packs/hyggeligFest.js"></script>
-    <script type="text/javascript" src="js/master.js"></script>
-
+    <script type="text/javascript" src="js/gamePacks/da_rimmeligDankFest.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
