Game pack overview js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
 
     <script type="text/javascript" src="js/gamePacks/da_rimmeligDankFest.js"></script>
+    <script type="text/javascript" src="js/gamePacks/gamePacks.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
