Even more progress on main.js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <p id="question">Question</p>
     <input id="getQuestionButton" type="button" value="clickme" />
 
     <script type="text/javascript" src="js/gamePacks/da_rimmeligDankFest.js"></script>
