Added bootstrap and jquery

--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Jeg Har Aldrig</title>
+
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
-    <p id="question">Question</p>
-    <input id="getQuestionButton" type="button" value="clickme" />
+
+    <script type="text/javascript" src="js/thirdParty/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/thirdParty/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="js/gamePacks/da_rimmeligDankFest.js"></script>
     <script type="text/javascript" src="js/gamePacks/gamePacks.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/master.js"></script>
   </body>
 </html>
