--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="../favicon.ico">
     <title>Jeg Har Aldrig</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -9,6 +11,7 @@
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
+
 
     <script type="text/javascript" src="js/thirdParty/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/thirdParty/bootstrap.min.js"></script>
