Another pack added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <li class="nav-item">
             <a class="nav-link" href="?gamePack=da_hyggeligFest">Hyggelig Fest</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="?gamePack=da_weedEdition">Weed Edition</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -51,6 +54,7 @@
 
     <script type="text/javascript" src="js/gamePacks/da_rimmeligDankFest.js"></script>
     <script type="text/javascript" src="js/gamePacks/da_hyggeligFest.js"></script>
+        <script type="text/javascript" src="js/gamePacks/da_weedEdition.js"></script>
     <script type="text/javascript" src="js/gamePacks/gamePacks.js"></script>
     <script type="text/javascript" src="js/master.js"></script>
 
