Page almost done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-      <a class="navbar-brand" href="#">Top navbar</a>
+      <a class="navbar-brand" href="./">Jeg Har Aldrig</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,18 +43,24 @@
 
       <div id="questionBlock">
         <div id="currentPack">Spiller pakken: null</div>
-        <div id="question">Kom med et spørgsmål!</div>
-        <a id="getQuestionButton" class="btn btn-lg btn-primary" href="javascript:void(0);" role="button">Få spørgsmål</a>
+        <div id="question">Kom med et spørgsmål</div>
+        <a id="getQuestionButton" class="btn btn-lg btn-primary" href="javascript:void(0);" role="button">Hit med et spørgsmål</a>
       </div>
 
     </main><!-- /.container -->
+
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted">Jeg Har Aldrig - V. 3.0.0 - <a href="https://github.com/Katofln/never-have-i-ever" target="_blank">Source Code</a></span>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="js/thirdParty/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/thirdParty/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="js/gamePacks/da_rimmeligDankFest.js"></script>
     <script type="text/javascript" src="js/gamePacks/da_hyggeligFest.js"></script>
-        <script type="text/javascript" src="js/gamePacks/da_weedEdition.js"></script>
+    <script type="text/javascript" src="js/gamePacks/da_weedEdition.js"></script>
     <script type="text/javascript" src="js/gamePacks/gamePacks.js"></script>
     <script type="text/javascript" src="js/master.js"></script>
 
