--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
       <div id="homepageBlock">
         <div id="choosePack">Vælg pakke i menuen ovenfor.</div>
+        <div id="contributeQuestions">Send dine <i>Jeg Har Aldrig</i> spørgsmål til <a href="mailto:frederikhstroem@gmail.com" target="_blank">frederikhstroem@gmail.com</a>, eller på <a href="https://github.com/Katofln/never-have-i-ever" target="_blank">GitHub</a>.</div>
       </div>
 
       <div id="questionBlock">
