Fixed pack typo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="./">Hjem</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="?gamePack=da_rimmeligDankFest">Rimmelig Dank Fest</a>
+            <a class="nav-link" href="?gamePack=da_rimeligDankFest">Rimelig Dank Fest</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="?gamePack=da_hyggeligFest">Hyggelig Fest</a>
