--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="../favicon.ico">
     <title>Jeg Har Aldrig</title>
+    <meta name="description" content="Spil Jeg Har Aldrig gratis! Skynd dig en på siden og tjek det nye design ud.">
 
     <link rel="stylesheet" href="css/thirdParty/bootstrap.min.css">
 
     <link rel="stylesheet" href="css/master.css">
   </head>
-  <body>
+  <body lang="da">
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
       <a class="navbar-brand" href="./">Jeg Har Aldrig</a>
@@ -63,7 +64,7 @@
 
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">Jeg Har Aldrig - V. 3.1.0 - <a href="https://github.com/Katofln/never-have-i-ever" target="_blank">Source Code</a></span>
+        <span class="text-muted">Jeg Har Aldrig - V. 3.1.1 - <a href="https://github.com/Katofln/never-have-i-ever" target="_blank">Source Code</a></span>
       </div>
     </footer>
 
