--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="../favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Jeg Har Aldrig</title>
     <meta name="description" content="Spil Jeg Har Aldrig gratis! Skynd dig en på siden og tjek det nye design ud.">
 
@@ -64,7 +65,7 @@
 
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">Jeg Har Aldrig - V. 3.1.1 - <a href="https://github.com/Katofln/never-have-i-ever" target="_blank">Source Code</a></span>
+        <span class="text-muted">Jeg Har Aldrig - V. 3.1.2 - <a href="https://github.com/Katofln/never-have-i-ever" target="_blank">Source Code</a></span>
       </div>
     </footer>
 
