Rettede en stavefejl xd

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Jeg Har Aldrig</title>
-    <meta name="description" content="Spil Jeg Har Aldrig gratis! Skynd dig en på siden og tjek det nye design ud.">
+    <meta name="description" content="Spil Jeg Har Aldrig gratis! Skynd dig ind på siden og tjek det nye design ud.">
 
     <link rel="stylesheet" href="css/thirdParty/bootstrap.min.css">
 
